[feat] Output erase, flush 기능 추가